--- a/index.html
+++ b/index.html
@@ -1,24 +1,45 @@
 <!DOCTYPE html>
 <head>
-    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="assets/java/java.js"></script>
 </head>
-<body>
-<div id="gamedef">
-    <p>The computer will select a random number at the start of the game. The player has a choice between 4 different crystals.</p>
-    <p>Clicking each will add a random number to the player's total score. If your score goes and matches that of the computer</p>
-    <p>choosen number, you will win. But if you pass the number, you will lose. Each crystal will have a certain number, but you</p>
-    <p>will not know what it is until you press it. These numbers won't have the same value everygame, when you restart the game </p>
-    <p>the numbers will also change.</p>
-    <br>
+<body class = "background">
+    <div class = "jumbotron title text-white bg-warning">Crystal Game</div>
+    <div class = "card text-white bg-dark">
+        <div class = "card-header rule2"> Rules</div>
+            <div class = "card-body">
+                <div class ="rules">
+                    The computer will select a random number at the start of the game. The player has a choice between 4 different crystals.
+                    Clicking each will add a random number to the player's total score. If your score goes and matches that of the computer
+                    choosen number, you will win. But if you pass the number, you will lose. Each crystal will have a certain number, but you
+                    will not know what it is until you press it. These numbers won't have the same value everygame, when you restart the game 
+                    the numbers will also change.
+                     <br>
+                    </div>
+        
+    </div>
+   
 </div>
 <div id= "winCondition">
-    <div id = "compNumber"></div>
-    <div id ="win">Wins: </div>
-    <div id ="lose">Losses: </div>
+    <div class = "column-6">
+        <div class= "card text-white bg-dark">
+            <div class="card-header rule2">Wins
+                <div class = "card-body">
+                    <div id ="win"></div>
+                </div>
+            </div>
+            <div class = "card text-white bg-dark">
+                <div class = "card-header rule2">Losses
+                    <div class = "card-body">
+                        <div id ="lose"></div>
+                </div>
+                </div>
+            </div>
+            </div>
 </div>
-<div>
+<div class = "row buttons">
 <div id = "button1">
     <img src = "assets/images/red.png">
 </div>
@@ -31,8 +52,12 @@
 <div id = "button4">
     <img src = "assets/images/green.png">
 </div>
-<div id = "totalNumber">Your total number is: </div>
+<br>
+<br>
 </div>
-
+<div class = "scores">
+<div id = "totalNumber">Your total number is: </div>
+<div id = "compNumber"></div>
+</div>
 </div>
 </body>
